basic layout set up

--- a/src/App.css
+++ b/src/App.css
@@ -7,6 +7,15 @@
   pointer-events: none;
 }
 
+.box{
+  background-color: yellowgreen;
+   padding: 20px;
+    margin: 20px;
+    flex: 1;
+    min-width: 200px;
+
+}
+
 @media (prefers-reduced-motion: no-preference) {
   .App-logo {
     animation: App-logo-spin infinite 20s linear;
@@ -36,3 +45,6 @@
     transform: rotate(360deg);
   }
 }
+
+
+
