--- a/src/App.css
+++ b/src/App.css
@@ -50,6 +50,7 @@ font-family: 'Zilla Slab Highlight', cursive; */
 
 .header{
   font-family: 'Playfair Display', serif;
+  color:peachpuff;
   font-size: 2em;
     font-weight: bold;
   position: absolute;
