better filtering of sub menu categories

--- a/src/App.css
+++ b/src/App.css
@@ -72,6 +72,10 @@ margin: 15px
     transform: translate(0, -2em);
 }
 
+.submenu{
+  cursor: pointer;
+}
+
 @media (prefers-reduced-motion: no-preference) {
   .App-logo {
     animation: App-logo-spin infinite 20s linear;
