--- a/src/App.css
+++ b/src/App.css
@@ -6,6 +6,12 @@ body{
   text-align: center;
 }
 
+.max{
+  margin: 100px 7% 0px;
+   margin-top: 300px;
+
+}
+
 video {
   object-fit: cover;
   width: 100vw;
@@ -27,6 +33,8 @@ video {
     flex: 1;
     min-width: 200px;
     height: 200px;
+    box-shadow: 0px 0px 16px -1px #000000
+
 
 }
 
@@ -80,6 +88,25 @@ a:link{
   cursor: pointer;
 }
 
+.hovereffect{
+  opacity:0;
+  background:#000000d1;
+  color:white;
+  height: 100%;
+  width: 100%;
+  padding: 20px;
+  margin-top: -20px;
+  margin-left: -20px;
+  text-align:left;
+}
+
+.hovereffectplacement{
+  font-size:1.5em; 
+  padding: 10px;
+  padding-top:23%;
+  border-bottom: 1px solid lavenderblush
+}
+
 @media (prefers-reduced-motion: no-preference) {
   .App-logo {
     animation: App-logo-spin infinite 20s linear;
@@ -120,6 +147,60 @@ background: indianred;
   to {
     transform: rotate(360deg);
   }
+}
+
+
+@media only screen and (max-width: 760px) {
+  .mobilemenu{
+    display: unset
+    }
+    .fullmenu{
+      display: none;
+    }
+    .box {
+      padding: 60px;
+      margin: unset;
+      flex: 1 1;
+      min-width: 200px;
+      height: 200px;
+      box-shadow: unset
+  }
+  .max{
+    margin:0
+  }
+
+  .mobileeffect{
+    background:"red"
+  }
+
+  .hovereffect{
+    
+    /* background: rgba(0, 0, 0, 0.82); */
+    
+    height: 100%;
+    width: 100%;
+    padding: 60px;
+    text-align: left;
+    position: relative;
+    top: -40px;
+    left: -40px;
+  }
+
+  .hovereffectplacement{
+    font-size:1.5em; 
+    padding: 10px;
+    padding-top:12%;
+    border-bottom: 1px solid lavenderblush
+  }
+}
+
+@media only screen and (min-width: 760px) {
+  .mobilemenu{
+    display: none
+    }
+    .fullmenu{
+      display: unset;
+    }
 }
 
 
